# templates-manager

./: README.md
.github/workflows/: build.yml
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: Main.css  Main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src/Common/Components/ConfirmModal/: ConfirmModal.tsx  ConfirmModalButtons.tsx
app/src/Common/Components/DirectoryInput/: DirectoryInput.tsx
app/src/Common/Components/DropdownMenu/: DropdownMenu.tsx
app/src/Common/Components/InfoModal/: InfoModal.tsx
app/src/Common/Components/Modal/: Modal.tsx
app/src/Common/Components/TextInput/: TextInput.tsx
app/src/Common/Types/: Config.tsx  CustomButtonProps.tsx
app/src/Common/Utilities/: ConfigUtilities.tsx  FsUtilities.tsx  TemplateUtilities.tsx
app/src/Pages/MainPage/: MainPage.tsx
app/src/Pages/MainPage/Components/ActionsRow/: ActionButton.tsx  ActionsRow.tsx
app/src/Pages/MainPage/Components/ConfirmModals/: DeleteAllTemplatesModal.tsx  DeleteTemplateModal.tsx
app/src/Pages/MainPage/Components/Directory/: Directory.tsx
app/src/Pages/MainPage/Components/NewTemplateModal/: NewTemplateModal.tsx
app/src/Pages/MainPage/Components/Sidebar/: Sidebar.tsx  SidebarButton.tsx  TemplateButton.tsx
app/src/Pages/MainPage/Components/TemplateViewer/: TemplateViewer.tsx
app/src/Pages/MainPage/Types/: DirectoryData.tsx  FileData.tsx  Template.tsx
app/src/Stores/: GeneralStore.tsx
