[package]
name = "templates-manager"
version = "0.3.0"
description = "An app for managing file templates"
authors = ["omerbenda"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-file", "fs-write-file", "fs-remove-dir", "path-all", "fs-copy-file", "fs-create-dir", "fs-exists", "dialog-open", "fs-read-dir", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
